# ROS_Alten_CR

./: README.md  README.md~
cr_mit/: CMakeLists.txt  CMakeLists.txt~  Readme.txt  Readme.txt~  package.xml  package.xml~
cr_mit/URDF/00_spuitkop/: manifest.xml
cr_mit/URDF/8_Inch_Run__8_Inch_Branch/: manifest.xml
cr_mit/URDF/90elbow/: manifest.xml
cr_mit/URDF/90elbow_200/: manifest.xml
cr_mit/URDF/90elbow_200_3/: manifest.xml
cr_mit/URDF/P101223/: manifest.xml
cr_mit/URDF/P102183/: manifest.xml
cr_mit/URDF/fitting_mjdb9010/: manifest.xml
cr_mit/launch/: full_environment_sim.launch  full_environment_sim.launch~  surface_visualisation.launch  surface_visualisation.launch~  test_urdf_rviz.launch  test_urdf_rviz.launch~
cr_mit/src/: clean_state.cpp  marker_viz.cpp  spuit_control.cpp  surface_visualisation.cpp
cr_mit/udev_rules/: initialprog.cpp
cr_tradet/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  readme.txt
cr_tradet/config/rviz/: tradet.rviz
cr_tradet/launch/: full_environment_sim.launch~  test_urdf_rviz.launch~  trajectory_determination.launch  trajectory_determination.launch~
cr_tradet/src/: object_visualisation.cpp
pr2_moveit_config/: .setup_assistant  package.xml
pr2_moveit_config/config/: controllers.yaml  pr2.srdf  sensors_rgbd.yaml
pr2_moveit_config/launch/: moveit_planning_execution.launch  moveit_planning_execution.launch~  pr2_moveit_controller_manager.launch  pr2_moveit_sensor_manager.launch.xml
using_markers/: CMakeLists.txt  package.xml
using_markers/src/: basic_shapes.cpp
(+28 files in other folders)
